RESOLVED FIXED271195
REGRESSION(275801@main): In some cases, InteractionRegion layers accumulate in the layer tree
https://bugs.webkit.org/show_bug.cgi?id=271195
Summary REGRESSION(275801@main): In some cases, InteractionRegion layers accumulate i...
Etienne
Reported 2024-03-18 16:17:52 PDT
In some cases, InteractionRegion layers accumulate in the layer tree.
Attachments
Etienne
Comment 1 2024-03-18 16:33:22 PDT
Etienne
Comment 2 2024-03-18 16:33:42 PDT
EWS
Comment 3 2024-03-19 00:04:09 PDT
Committed 276335@main (3472dac0219c): <https://commits.webkit.org/276335@main> Reviewed commits have been landed. Closing PR #26085 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.