REGRESSION(275801@main): In some cases, InteractionRegion layers accumulate in the layer tree https://bugs.webkit.org/show_bug.cgi?id=271195 <rdar://124972680>

Reviewed by Mike Wyrzykowski.

The code managing InteractionRegion layers in the RemoteLayerTree has a
strict requirement for no <IntRect, InteractionRegion::Type> duplicate.
We use the `m_interactionRects` / `m_occlusionRects` / `m_elementGuardRects`
sets on the EventRegionContext to ensure this.

But 275801@main introduced a code-path where we insert extra Interaction
Regions for photos in `shrinkWrapInteractionRegions`. We need to maintain
the no-duplicate rule there too.

* Source/WebCore/rendering/EventRegion.cpp:
(WebCore::EventRegionContext::shrinkWrapInteractionRegions):
Make sure the extra regions "to add after merge" do not create
<IntRect, InteractionRegion::Type> duplicates. Update the existing
region's content hint instead.

* LayoutTests/interaction-region/content-hint-overlap-dedupe-expected.txt: Added.
* LayoutTests/interaction-region/content-hint-overlap-dedupe.html: Added.
Add a test covering this and exercising the assertions in the
RemoteLayerTree code.

Canonical link: https://commits.webkit.org/276335@main